Introduce hard-fail mode switchers and update metrics gathering